@@ -43,120 +43,127 @@ import edu.wustl.common.util.logger.Logger;
  */
 public class Participant extends AbstractDomainObject implements java.io.Serializable, IActivityStatus
 {
+	/**
+	 * logger Logger - Generic logger.
+	 */
+	private static org.apache.log4j.Logger logger = Logger.getLogger(Participant.class);
+
+	/**
+	 * Serial Version ID.
+	 */
 	private static final long serialVersionUID = 1234567890L;
-	
+
 	/**
 	 * System generated unique id.
-     * */
+	 * */
 	protected Long id;
-	
+
 	/**
-     * Last name of the participant.
-     */
+	 * Last name of the participant.
+	 */
 	protected String lastName;
-	
+
 	/**
-     * First name of the participant.
-     */
+	 * First name of the participant.
+	 */
 	protected String firstName;
-	
+
 	/**
-     * Middle name of the participant.
-     */
+	 * Middle name of the participant.
+	 */
 	protected String middleName;
-	
+
 	/**
-     * Birth date of participant.
-     */
+	 * Birth date of participant.
+	 */
 	protected Date birthDate;
-	
+
 	/**
-     * The gender of the participant.
-     */
+	 * The gender of the participant.
+	 */
 	protected String gender;
-	
+
 	/**
-     * The genetic constitution of the individual.
-     */
+	 * The genetic constitution of the individual.
+	 */
 	protected String sexGenotype;
 
-//	/**
-//     * Participant's racial origination.
-//     */
-//	protected String race;
-	
+	//	/**
+	//     * Participant's racial origination.
+	//     */
+	//	protected String race;
+
 	/**
 	 * Participant's race origination.
 	 */
 	protected Collection raceCollection = new HashSet();
-	
+
 	/**
-     * Participant's ethnicity status.
-     */
+	 * Participant's ethnicity status.
+	 */
 	protected String ethnicity;
-	
+
 	/**
-     * Social Security Number of participant.
-     */
+	 * Social Security Number of participant.
+	 */
 	protected String socialSecurityNumber;
-	
+
 	/**
 	 * Defines whether this participant record can be queried (Active) or not queried (Inactive) by any actor
 	 * */
 	protected String activityStatus;
-	
+
 	/**
 	 * Death date of participant.
 	 */
 	protected Date deathDate;
-	
+
 	/**
 	 * Defines the vital status of the participant like 'Dead', 'Alive' or 'Unknown'.
 	 */
 	protected String vitalStatus;
-	
-	
+
 	/**
-     * A collection of medical record identification number that refers to a Participant. 
-     * */
-	protected Collection participantMedicalIdentifierCollection  = new LinkedHashSet();// = new HashSet();
-	
+	 * A collection of medical record identification number that refers to a Participant. 
+	 * */
+	protected Collection participantMedicalIdentifierCollection = new LinkedHashSet();// = new HashSet();
+
 	/**
-     * A collection of registration of a Participant to a Collection Protocol. 
-     * */
+	 * A collection of registration of a Participant to a Collection Protocol. 
+	 * */
 	protected Collection collectionProtocolRegistrationCollection = new HashSet();
-    
-    protected Collection clinicalStudyRegistrationCollection = new HashSet();
-    
 
-    /**
-   * Returns collection registrations of this participant.
-   * @return collection of registrations of this participant.
-   * @hibernate.set name="clinicalStudyRegistrationCollection" table="CATISSUE_CLINICAL_STUDY_REG"
-   * @hibernate.collection-key column="PARTICIPANT_ID" lazy="true"
-   * @hibernate.collection-one-to-many class="edu.wustl.catissuecore.domain.ClinicalStudyRegistration"
-   * @see setRegistrationCollection(Collection)
-   */
-  public Collection getClinicalStudyRegistrationCollection()
-  {
-      return clinicalStudyRegistrationCollection;
-  }
+	protected Collection clinicalStudyRegistrationCollection = new HashSet();
 
-  
-  public void setClinicalStudyRegistrationCollection(Collection clinicalStudyRegistrationCollection)
-  {
-      this.clinicalStudyRegistrationCollection = clinicalStudyRegistrationCollection;
-  }
-	
- 	//Default Constructor
-	public Participant()
-	{		
+	/**
+	* Returns collection registrations of this participant.
+	* @return collection of registrations of this participant.
+	* @hibernate.set name="clinicalStudyRegistrationCollection" table="CATISSUE_CLINICAL_STUDY_REG"
+	* @hibernate.collection-key column="PARTICIPANT_ID" lazy="true"
+	* @hibernate.collection-one-to-many class="edu.wustl.catissuecore.domain.ClinicalStudyRegistration"
+	* @see setRegistrationCollection(Collection)
+	*/
+	public Collection getClinicalStudyRegistrationCollection()
+	{
+		return clinicalStudyRegistrationCollection;
 	}
-	
+
+	public void setClinicalStudyRegistrationCollection(Collection clinicalStudyRegistrationCollection)
+	{
+		this.clinicalStudyRegistrationCollection = clinicalStudyRegistrationCollection;
+	}
+
+	//Default Constructor
+	public Participant()
+	{
+		super();
+	}
+
 	public Participant(AbstractActionForm form)
 	{
 		setAllValues(form);
 	}
+
 	/**
 	 * Copy Constructor
 	 * @param participant Participant object
@@ -175,39 +182,39 @@ public class Participant extends AbstractDomainObject implements java.io.Seriali
 		this.activityStatus = participant.getActivityStatus();
 		this.deathDate = participant.getDeathDate();
 		this.vitalStatus = participant.getVitalStatus();
-		
-		Collection<Race> raceCollection =  new ArrayList<Race>();
+
+		Collection<Race> raceCollection = new ArrayList<Race>();
 		Iterator<Race> raceItr = participant.getRaceCollection().iterator();
-		while(raceItr.hasNext())
+		while (raceItr.hasNext())
 		{
 			Race race = new Race(raceItr.next());
 			race.setParticipant(this);
 			raceCollection.add(race);
 		}
 		this.raceCollection = raceCollection;
-		
-		Collection<ParticipantMedicalIdentifier> pmiCollection =  new ArrayList<ParticipantMedicalIdentifier>();
-		if(participant.getParticipantMedicalIdentifierCollection()!=null)
+
+		Collection<ParticipantMedicalIdentifier> pmiCollection = new ArrayList<ParticipantMedicalIdentifier>();
+		if (participant.getParticipantMedicalIdentifierCollection() != null)
 		{
 			Iterator<ParticipantMedicalIdentifier> pmiItr = participant.getParticipantMedicalIdentifierCollection().iterator();
-			while(pmiItr.hasNext())
+			while (pmiItr.hasNext())
 			{
 				ParticipantMedicalIdentifier pmi = new ParticipantMedicalIdentifier(pmiItr.next());
 				pmi.setParticipant(this);
 				pmiCollection.add(pmi);
 			}
-			this.participantMedicalIdentifierCollection =pmiCollection; 
-		}	
+			this.participantMedicalIdentifierCollection = pmiCollection;
+		}
 	}
 
 	/**
-     * Returns System generated unique id.
-     * @return Long System generated unique id.
-     * @see #setId(Long)
-     * @hibernate.id name="id" column="IDENTIFIER" type="long" length="30"
-     * unsaved-value="null" generator-class="native" 
-     * @hibernate.generator-param name="sequence" value="CATISSUE_PARTICIPANT_SEQ"
-     */
+	 * Returns System generated unique id.
+	 * @return Long System generated unique id.
+	 * @see #setId(Long)
+	 * @hibernate.id name="id" column="IDENTIFIER" type="long" length="30"
+	 * unsaved-value="null" generator-class="native" 
+	 * @hibernate.generator-param name="sequence" value="CATISSUE_PARTICIPANT_SEQ"
+	 */
 	@Override
 	public Long getId()
 	{
@@ -215,228 +222,228 @@ public class Participant extends AbstractDomainObject implements java.io.Seriali
 	}
 
 	/**
-     * Sets system generated unique id.
-     * @param id System generated unique id.
-     * @see #getId()
-     * */
+	 * Sets system generated unique id.
+	 * @param identifier System generated unique id.
+	 * @see #getId()
+	 * */
 	@Override
-	public void setId(Long id)
+	public void setId(Long identifier)
 	{
-		this.id = id;
+		this.id = identifier;
 	}
 
 	/**
-     * Returns the last name of the Participant. 
-     * @return String representing the last name of the Participant.
-     * @see #setLastName(String)
-     * @hibernate.property name="lastName" type="string" 
-     * column="LAST_NAME" length="255"
-     */
+	 * Returns the last name of the Participant. 
+	 * @return String representing the last name of the Participant.
+	 * @see #setLastName(String)
+	 * @hibernate.property name="lastName" type="string" 
+	 * column="LAST_NAME" length="255"
+	 */
 	public String getLastName()
 	{
 		return lastName;
 	}
 
 	/**
-     * Sets the last name of the Participant.
-     * @param lastName Last Name of the Participant.
-     * @see #getLastName()
-     */
+	 * Sets the last name of the Participant.
+	 * @param lastName Last Name of the Participant.
+	 * @see #getLastName()
+	 */
 	public void setLastName(String lastName)
 	{
 		this.lastName = lastName;
 	}
 
 	/**
-     * Returns the first name of the Participant.
-     * @return String representing the first name of the Participant.
-     * @see #setFirstName(String)
-     * @hibernate.property name="firstName" type="string" 
-     * column="FIRST_NAME" length="255"
-     */
+	 * Returns the first name of the Participant.
+	 * @return String representing the first name of the Participant.
+	 * @see #setFirstName(String)
+	 * @hibernate.property name="firstName" type="string" 
+	 * column="FIRST_NAME" length="255"
+	 */
 	public String getFirstName()
 	{
 		return firstName;
 	}
 
 	/**
-     * Sets the first name of the Participant.
-     * @param firstName String representing the first name of the Participant.
-     * @see #getFirstName()
-     */
+	 * Sets the first name of the Participant.
+	 * @param firstName String representing the first name of the Participant.
+	 * @see #getFirstName()
+	 */
 	public void setFirstName(String firstName)
 	{
 		this.firstName = firstName;
 	}
 
 	/**
-     * Returns the middle name of the Participant.
-     * @return String representing the middle name of the Participant.
-     * @see #setMiddleName(String)
-     * @hibernate.property name="middleName" type="string" 
-     * column="MIDDLE_NAME" length="255"
-     */
+	 * Returns the middle name of the Participant.
+	 * @return String representing the middle name of the Participant.
+	 * @see #setMiddleName(String)
+	 * @hibernate.property name="middleName" type="string" 
+	 * column="MIDDLE_NAME" length="255"
+	 */
 	public String getMiddleName()
 	{
 		return middleName;
 	}
 
 	/**
-     * Sets the middle name of the Participant.
-     * @param middleName String representing the middle name of the Participant.
-     * @see #getMiddleName()
-     */
+	 * Sets the middle name of the Participant.
+	 * @param middleName String representing the middle name of the Participant.
+	 * @see #getMiddleName()
+	 */
 	public void setMiddleName(String middleName)
 	{
 		this.middleName = middleName;
 	}
 
 	/**
-     * Returns the date of birth of the Participant.
-     * @return String representing the middle name of the Participant.
-     * @see #setBirthDate(String)
-     * @hibernate.property name="birthDate" column="BIRTH_DATE" type="date"
-     */
+	 * Returns the date of birth of the Participant.
+	 * @return String representing the middle name of the Participant.
+	 * @see #setBirthDate(String)
+	 * @hibernate.property name="birthDate" column="BIRTH_DATE" type="date"
+	 */
 	public Date getBirthDate()
 	{
 		return birthDate;
 	}
 
 	/**
-     * Sets the date of birth of the Participant.
-     * @param birthDate String representing the date of birth of the Participant.
-     * @see #getDateOfBirth()
-     */
+	 * Sets the date of birth of the Participant.
+	 * @param birthDate String representing the date of birth of the Participant.
+	 * @see #getDateOfBirth()
+	 */
 	public void setBirthDate(Date birthDate)
 	{
 		this.birthDate = birthDate;
 	}
 
 	/**
-     * Returns the gender of a participant.
-     * @return String representing the gender of a participant.
-     * @see #setGender(String)
-     * @hibernate.property name="gender" type="string" 
-     * column="GENDER" length="20"
-     */
+	 * Returns the gender of a participant.
+	 * @return String representing the gender of a participant.
+	 * @see #setGender(String)
+	 * @hibernate.property name="gender" type="string" 
+	 * column="GENDER" length="20"
+	 */
 	public String getGender()
 	{
 		return gender;
 	}
 
 	/**
-     * Sets the gender of a participant.
-     * @param gender the gender of a participant.
-     * @see #getGender()
-     */
+	 * Sets the gender of a participant.
+	 * @param gender the gender of a participant.
+	 * @see #getGender()
+	 */
 	public void setGender(String gender)
 	{
 		this.gender = gender;
 	}
-	
+
 	/**
-     * Returns the genotype of a participant.
-     * @return String representing the genotype of a participant.
-     * @see #setSexGenotype(String)
-     * @hibernate.property name="sexGenotype" type="string" 
-     * column="GENOTYPE" length="50"
-     */
+	 * Returns the genotype of a participant.
+	 * @return String representing the genotype of a participant.
+	 * @see #setSexGenotype(String)
+	 * @hibernate.property name="sexGenotype" type="string" 
+	 * column="GENOTYPE" length="50"
+	 */
 	public String getSexGenotype()
 	{
 		return sexGenotype;
 	}
-	
+
 	/**
-     * Sets the genotype of a participant.
-     * @param sexGenotype the genotype of a participant.
-     * @see #getSexGenotype()
-     */
+	 * Sets the genotype of a participant.
+	 * @param sexGenotype the genotype of a participant.
+	 * @see #getSexGenotype()
+	 */
 	public void setSexGenotype(String sexGenotype)
 	{
 		this.sexGenotype = sexGenotype;
 	}
 
-//	/**
-//     * Returns the race of the Participant.
-//     * @return String representing the race of the Participant.
-//     * @see #setRace(String)
-//     * @hibernate.property name="race" type="string" 
-//     * column="RACE" length="50"
-//     */
-//	public String getRace()
-//	{
-//		return race;
-//	}
-//
-//	/**
-//     * Sets the race of the Participant.
-//     * @param race String representing the race of the Participant.
-//     * @see #getRace()
-//     */
-//	public void setRace(String race)
-//	{
-//		this.race = race;
-//	}
+	//	/**
+	//     * Returns the race of the Participant.
+	//     * @return String representing the race of the Participant.
+	//     * @see #setRace(String)
+	//     * @hibernate.property name="race" type="string" 
+	//     * column="RACE" length="50"
+	//     */
+	//	public String getRace()
+	//	{
+	//		return race;
+	//	}
+	//
+	//	/**
+	//     * Sets the race of the Participant.
+	//     * @param race String representing the race of the Participant.
+	//     * @see #getRace()
+	//     */
+	//	public void setRace(String race)
+	//	{
+	//		this.race = race;
+	//	}
 
-    /**
-     * @return Returns the raceCollection.
-     * @hibernate.set name="raceCollection" table="CATISSUE_RACE"
+	/**
+	 * @return Returns the raceCollection.
+	 * @hibernate.set name="raceCollection" table="CATISSUE_RACE"
 	 * cascade="save-update" inverse="false" lazy="false"
 	 * @hibernate.collection-key column="PARTICIPANT_ID"
 	 * @hibernate.element type="string" column="NAME" length="30"
-     */
-    public Collection getRaceCollection()
-    {
-        return raceCollection;
-    }
-    
-    /**
-     * @param raceCollection The raceCollection to set.
-     */
-    public void setRaceCollection(Collection raceCollection)
-    {
-        this.raceCollection = raceCollection;
-    }
-    
+	 */
+	public Collection getRaceCollection()
+	{
+		return raceCollection;
+	}
+
 	/**
-     * Returns the ethnicity of the Participant.
-     * @return Ethnicity of the Participant.
-     * @see #setEthnicity(String)
-     * @hibernate.property name="ethnicity" type="string"
-     * column="ETHNICITY" length="50" 
-     */
+	 * @param raceCollection The raceCollection to set.
+	 */
+	public void setRaceCollection(Collection raceCollection)
+	{
+		this.raceCollection = raceCollection;
+	}
+
+	/**
+	 * Returns the ethnicity of the Participant.
+	 * @return Ethnicity of the Participant.
+	 * @see #setEthnicity(String)
+	 * @hibernate.property name="ethnicity" type="string"
+	 * column="ETHNICITY" length="50" 
+	 */
 	public String getEthnicity()
 	{
 		return ethnicity;
 	}
 
 	/**
-     * Sets the ethnicity of the Participant.
-     * @param ethnicity Ethnicity of the Participant.
-     * @see #getEthnicity()
-     */
+	 * Sets the ethnicity of the Participant.
+	 * @param ethnicity Ethnicity of the Participant.
+	 * @see #getEthnicity()
+	 */
 	public void setEthnicity(String ethnicity)
 	{
 		this.ethnicity = ethnicity;
 	}
 
 	/**
-     * Returns the Social Security Number of the Participant.
-     * @return String representing the Social Security Number of the Participant.
-     * @see #setSocialSecurityNumber(String)
+	 * Returns the Social Security Number of the Participant.
+	 * @return String representing the Social Security Number of the Participant.
+	 * @see #setSocialSecurityNumber(String)
 	 * @hibernate.property name="socialSecurityNumber" type="string"
-     * column="SOCIAL_SECURITY_NUMBER" length="50" unique="true" 
-     */
+	 * column="SOCIAL_SECURITY_NUMBER" length="50" unique="true" 
+	 */
 	public String getSocialSecurityNumber()
 	{
 		return socialSecurityNumber;
 	}
 
 	/**
-     * Sets the Social Security Number of the Participant.
-     * @param birthDate String representing the Social Security Number of the Participant.
-     * @see #getSocialSecurityNumber()
-     */
+	 * Sets the Social Security Number of the Participant.
+	 * @param birthDate String representing the Social Security Number of the Participant.
+	 * @see #getSocialSecurityNumber()
+	 */
 	public void setSocialSecurityNumber(String socialSecurityNumber)
 	{
 		this.socialSecurityNumber = socialSecurityNumber;
@@ -463,26 +470,27 @@ public class Participant extends AbstractDomainObject implements java.io.Seriali
 	{
 		this.activityStatus = activityStatus;
 	}
-	
+
 	/**
-     * Returns the date of death of the Participant.
-     * @return Date representing the death date of the Participant.
-     * @see #setDeathDate(Date)
-     * @hibernate.property name="deathDate" column="DEATH_DATE" type="date"
-     */
-	public Date getDeathDate() 
+	 * Returns the date of death of the Participant.
+	 * @return Date representing the death date of the Participant.
+	 * @see #setDeathDate(Date)
+	 * @hibernate.property name="deathDate" column="DEATH_DATE" type="date"
+	 */
+	public Date getDeathDate()
 	{
 		return deathDate;
 	}
-	
+
 	/**
 	 * Sets the date of birth of the Participant.
 	 * @param deathDate The deathDate to set.
 	 */
-	public void setDeathDate(Date deathDate) {
+	public void setDeathDate(Date deathDate)
+	{
 		this.deathDate = deathDate;
 	}
-	
+
 	/**
 	 * Returns the vital status of the participant.
 	 * @return Returns the vital status of the participant.
@@ -490,20 +498,20 @@ public class Participant extends AbstractDomainObject implements java.io.Seriali
 	 * @hibernate.property name="vitalStatus" type="string"
 	 * column="VITAL_STATUS" length="50"
 	 */
-	public String getVitalStatus() 
+	public String getVitalStatus()
 	{
 		return vitalStatus;
 	}
-	
+
 	/**
 	 * Sets the vital status of the Participant.
 	 * @param vitalStatus The vitalStatus to set.
 	 */
-	public void setVitalStatus(String vitalStatus) 
+	public void setVitalStatus(String vitalStatus)
 	{
 		this.vitalStatus = vitalStatus;
-	}	
-	
+	}
+
 	/**
 	 * Returns collection of medical identifiers associated with this participant.
 	 * @return collection of medical identifiers of this participant.
@@ -550,7 +558,7 @@ public class Participant extends AbstractDomainObject implements java.io.Seriali
 	{
 		this.collectionProtocolRegistrationCollection = collectionProtocolRegistrationCollection;
 	}
-	
+
 	/**
 	 * This function Copies the data from a StorageTypeForm object to a StorageType object.
 	 * @param storageTypeForm A StorageTypeForm object containing the information about the StorageType.  
@@ -558,203 +566,247 @@ public class Participant extends AbstractDomainObject implements java.io.Seriali
 	@Override
 	public void setAllValues(IValueObject abstractForm)
 	{
-	    try
-	    {
-	        ParticipantForm form = (ParticipantForm) abstractForm;
-	        Validator validator = new Validator();
-	        
-	        this.activityStatus = form.getActivityStatus();
-	        this.firstName = form.getFirstName();
-	        this.middleName = form.getMiddleName();
-	        this.lastName = form.getLastName();
+		try
+		{
+			ParticipantForm form = (ParticipantForm) abstractForm;
+			Validator validator = new Validator();
 
-	        if(validator.isValidOption(form.getGender()))
-	        	this.gender = form.getGender();
-	        else
-	        	this.gender = null;
-	        
-	        if(validator.isValidOption(form.getGenotype()) )
-	        	this.sexGenotype = form.getGenotype();
-	        else
-	        	this.sexGenotype = null;
+			this.activityStatus = form.getActivityStatus();
+			this.firstName = form.getFirstName();
+			this.middleName = form.getMiddleName();
+			this.lastName = form.getLastName();
 
-	        if(validator.isValidOption(form.getEthnicity()) )
-	        	this.ethnicity = form.getEthnicity();
-	       	else
-	       		this.ethnicity = null;
-	        
-//	        if(validator.isValidOption(form.getRace()) )
-//	        	this.race = form.getRace();
-//	        else
-//	        	this.race = null;
-	        raceCollection.clear();
-        	String [] raceTypes = form.getRaceTypes();
-        	if(raceTypes!=null)
-        	{
-	        	for (int i = 0; i < raceTypes.length; i++)
+			if (validator.isValidOption(form.getGender()))
+			{
+				this.gender = form.getGender();
+			}
+			else
+			{
+				this.gender = null;
+			}
+
+			if (validator.isValidOption(form.getGenotype()))
+			{
+				this.sexGenotype = form.getGenotype();
+			}
+			else
+			{
+				this.sexGenotype = null;
+			}
+
+			if (validator.isValidOption(form.getEthnicity()))
+			{
+				this.ethnicity = form.getEthnicity();
+			}
+			else
+			{
+				this.ethnicity = null;
+			}
+
+			//	        if(validator.isValidOption(form.getRace()) )
+			//	        	this.race = form.getRace();
+			//	        else
+			//	        	this.race = null;
+			raceCollection.clear();
+			String[] raceTypes = form.getRaceTypes();
+			if (raceTypes != null)
+			{
+				for (int i = 0; i < raceTypes.length; i++)
 				{
-	        		if(!raceTypes[i].equals("-1"))
-	        		{
-	        			Race race = new Race();
-	        			race.setRaceName(raceTypes[i]);
-	        			race.setParticipant(this);
-	        			raceCollection.add(race);
-	        		}
-	        		
+					if (!raceTypes[i].equals("-1"))
+					{
+						Race race = new Race();
+						race.setRaceName(raceTypes[i]);
+						race.setParticipant(this);
+						raceCollection.add(race);
+					}
+
 				}
-        	}
-	        
-	        String socialSecurityNumberTemp = form.getSocialSecurityNumberPartA()+"-"+form.getSocialSecurityNumberPartB()+"-"+form.getSocialSecurityNumberPartC();
-	        
-	        if(!validator.isEmpty(socialSecurityNumberTemp) && validator.isValidSSN(socialSecurityNumberTemp))
-	        	this.socialSecurityNumber = socialSecurityNumberTemp;
-	        else
-	        	this.socialSecurityNumber = null;
-	        
-	        this.birthDate = Utility.parseDate(form.getBirthDate(),Utility.datePattern(form.getBirthDate()));
-	        
-	        this.deathDate = Utility.parseDate(form.getDeathDate(),Utility.datePattern(form.getDeathDate()));
-	        
-	        if(validator.isValidOption(form.getVitalStatus()) )
-	        	this.vitalStatus = form.getVitalStatus();
-	        else
-	        	this.vitalStatus = null;
-	        
-	        this.participantMedicalIdentifierCollection.clear();
-	        Map map = form.getValues();
-	        Logger.out.debug("Map "+map);
-	        MapDataParser parser = new MapDataParser("edu.wustl.catissuecore.domain");
-	        this.participantMedicalIdentifierCollection = parser.generateData(map);
-	        
-	        //Collection Protocol Registration of the participant
+			}
+
+			String socialSecurityNumberTemp = form.getSocialSecurityNumberPartA() + "-" + form.getSocialSecurityNumberPartB() + "-"
+					+ form.getSocialSecurityNumberPartC();
+
+			if (!validator.isEmpty(socialSecurityNumberTemp) && validator.isValidSSN(socialSecurityNumberTemp))
+			{
+				this.socialSecurityNumber = socialSecurityNumberTemp;
+			}
+			else
+			{
+				this.socialSecurityNumber = null;
+			}
+
+			this.birthDate = Utility.parseDate(form.getBirthDate(), Utility.datePattern(form.getBirthDate()));
+
+			this.deathDate = Utility.parseDate(form.getDeathDate(), Utility.datePattern(form.getDeathDate()));
+
+			if (validator.isValidOption(form.getVitalStatus()))
+			{
+				this.vitalStatus = form.getVitalStatus();
+			}
+			else
+			{
+				this.vitalStatus = null;
+			}
+
+			this.participantMedicalIdentifierCollection.clear();
+			Map map = form.getValues();
+			Logger.out.debug("Map " + map);
+			MapDataParser parser = new MapDataParser("edu.wustl.catissuecore.domain");
+			this.participantMedicalIdentifierCollection = parser.generateData(map);
+
+			//Collection Protocol Registration of the participant
 			//(Abhishek Mehta)
-	        this.collectionProtocolRegistrationCollection.clear();
-	        Map mapCollectionProtocolRegistrationCollection = form.getCollectionProtocolRegistrationValues();
-	        Logger.out.debug("Map "+map);
-	        MapDataParser parserCollectionProtocolRegistrationCollection = new MapDataParser("edu.wustl.catissuecore.domain");
-	        this.collectionProtocolRegistrationCollection = parserCollectionProtocolRegistrationCollection.generateData(mapCollectionProtocolRegistrationCollection);
-	        Logger.out.debug("ParticipantMedicalIdentifierCollection "+participantMedicalIdentifierCollection);
-	        
-	        setConsentsResponseToCollectionProtocolRegistration(form);
-	    }
-	    catch(Exception excp)
-	    {
-	    	// use of logger as per bug 79
-	    	Logger.out.error(excp.getMessage(),excp); 
-	    }
+			this.collectionProtocolRegistrationCollection.clear();
+			Map mapCollectionProtocolRegistrationCollection = form.getCollectionProtocolRegistrationValues();
+			Logger.out.debug("Map " + map);
+			MapDataParser parserCollectionProtocolRegistrationCollection = new MapDataParser("edu.wustl.catissuecore.domain");
+			this.collectionProtocolRegistrationCollection = parserCollectionProtocolRegistrationCollection
+					.generateData(mapCollectionProtocolRegistrationCollection);
+			Logger.out.debug("ParticipantMedicalIdentifierCollection " + participantMedicalIdentifierCollection);
+
+			setConsentsResponseToCollectionProtocolRegistration(form);
+		}
+		catch (Exception excp)
+		{
+			// use of logger as per bug 79
+			Logger.out.error(excp.getMessage(), excp);
+		}
 	}
-	
+
 	/*
 	 * Setting Consent Response for the collection protocol
 	 * //Abhishek Mehta
 	 */
-	private void setConsentsResponseToCollectionProtocolRegistration(ParticipantForm form) throws Exception
+	private void setConsentsResponseToCollectionProtocolRegistration(ParticipantForm form)
 	{
-		Collection <ConsentResponseBean> consentResponseBeanCollection = form.getConsentResponseBeanCollection();
-		Iterator itr = this.collectionProtocolRegistrationCollection.iterator();
-		while(itr.hasNext())
+		try
 		{
-			CollectionProtocolRegistration collectionProtocolRegistration = (CollectionProtocolRegistration)itr.next();
-			setConsentResponse(collectionProtocolRegistration,consentResponseBeanCollection);
+			
+		
+		Collection<ConsentResponseBean> consentResponseBeanCollection = form.getConsentResponseBeanCollection();
+		Iterator itr = this.collectionProtocolRegistrationCollection.iterator();
+		while (itr.hasNext())
+		{
+			CollectionProtocolRegistration collectionProtocolRegistration = (CollectionProtocolRegistration) itr.next();
+			setConsentResponse(collectionProtocolRegistration, consentResponseBeanCollection);
+		}
+		}
+		catch (Exception e)
+		{
+			// TODO: handle exception
 		}
 	}
+
 	/*
 	 * Set Consent Response for given collection protocol
 	 *  //Abhishek Mehta
 	 */
-	private void setConsentResponse(CollectionProtocolRegistration collectionProtocolRegistration , Collection consentResponseBeanCollection) throws Exception
+	private void setConsentResponse(CollectionProtocolRegistration collectionProtocolRegistration, Collection consentResponseBeanCollection)
 	{
-		if(consentResponseBeanCollection!= null && !consentResponseBeanCollection.isEmpty())
+		try
+		{
+			
+		
+		if (consentResponseBeanCollection != null && !consentResponseBeanCollection.isEmpty())
 		{
 			Iterator itr = consentResponseBeanCollection.iterator();
-			while(itr.hasNext())
-	        {
-				ConsentResponseBean consentResponseBean = (ConsentResponseBean)itr.next();
+			while (itr.hasNext())
+			{
+				ConsentResponseBean consentResponseBean = (ConsentResponseBean) itr.next();
 				long cpIDcollectionProtocolRegistration = collectionProtocolRegistration.getCollectionProtocol().getId().longValue();
-				long cpIDconsentRegistrationBean =  consentResponseBean.getCollectionProtocolID();
-				if(cpIDcollectionProtocolRegistration == cpIDconsentRegistrationBean){
-					
+				long cpIDconsentRegistrationBean = consentResponseBean.getCollectionProtocolID();
+				if (cpIDcollectionProtocolRegistration == cpIDconsentRegistrationBean)
+				{
+
 					String signedConsentUrl = consentResponseBean.getSignedConsentUrl();
 					long witnessId = consentResponseBean.getWitnessId();
 					String consentDate = consentResponseBean.getConsentDate();
 					Collection consentTierResponseCollection = prepareConsentTierResponseCollection(consentResponseBean.getConsentResponse(), true);
-					 
+
 					collectionProtocolRegistration.setSignedConsentDocumentURL(signedConsentUrl);
-					if(witnessId>0)
+					if (witnessId > 0)
 					{
 						User consentWitness = new User();
-						consentWitness.setId(new Long(witnessId));
+						consentWitness.setId(Long.valueOf(witnessId));
 						collectionProtocolRegistration.setConsentWitness(consentWitness);
 					}
-					
+
 					collectionProtocolRegistration.setConsentSignatureDate(Utility.parseDate(consentDate));
 					collectionProtocolRegistration.setConsentTierResponseCollection(consentTierResponseCollection);
 					collectionProtocolRegistration.setConsentWithdrawalOption(consentResponseBean.getConsentWithdrawalOption());
 					break;
 				}
-	        }
-		}
-		else // Setting default response to collection protocol
-		{
-			if(collectionProtocolRegistration.getCollectionProtocol()!=null)
-			{
-			String cpIDcollectionProtocolRegistration = collectionProtocolRegistration.getCollectionProtocol().getId().toString();
-			Collection consentTierCollection = getConsentList(cpIDcollectionProtocolRegistration);
-			
-			Collection consentTierResponseCollection = prepareConsentTierResponseCollection(consentTierCollection,false);
-			collectionProtocolRegistration.setConsentTierResponseCollection(consentTierResponseCollection);
 			}
 		}
+		else
+		// Setting default response to collection protocol
+		{
+			if (collectionProtocolRegistration.getCollectionProtocol() != null)
+			{
+				String cpIDcollectionProtocolRegistration = collectionProtocolRegistration.getCollectionProtocol().getId().toString();
+				Collection consentTierCollection = getConsentList(cpIDcollectionProtocolRegistration);
+
+				Collection consentTierResponseCollection = prepareConsentTierResponseCollection(consentTierCollection, false);
+				collectionProtocolRegistration.setConsentTierResponseCollection(consentTierResponseCollection);
+			}
+		}
+		}
+		catch (Exception e)
+		{
+			// TODO: handle exception
+		}
 	}
-	
-	
+
 	/*
 	 * Preparing consent response collection from entered response.
 	 * //Abhishek Mehta
 	 */
-	private Collection prepareConsentTierResponseCollection(Collection consentResponse, boolean isResponse) 
+	private Collection prepareConsentTierResponseCollection(Collection consentResponse, boolean isResponse)
 	{
 		Collection consentTierResponseCollection = new HashSet();
-		if(consentResponse!= null && !consentResponse.isEmpty())
+		if (consentResponse != null && !consentResponse.isEmpty())
 		{
-			if(isResponse)
+			if (isResponse)
 			{
 				Iterator iter = consentResponse.iterator();
-		       ConsentUtil.createConsentResponseColl(consentTierResponseCollection, iter);
+				ConsentUtil.createConsentResponseColl(consentTierResponseCollection, iter);
 			}
 			else
 			{
 				Iterator iter = consentResponse.iterator();
-		        while(iter.hasNext())
-		        {
-		        	ConsentTier consentTier = (ConsentTier)iter.next();
-		        	ConsentTierResponse consentTierResponse = new ConsentTierResponse();
-		        	consentTierResponse.setResponse(Constants.NOT_SPECIFIED);
-		        	consentTierResponse.setConsentTier(consentTier);
-		        	consentTierResponseCollection.add(consentTierResponse);
-		        }
+				while (iter.hasNext())
+				{
+					ConsentTier consentTier = (ConsentTier) iter.next();
+					ConsentTierResponse consentTierResponse = new ConsentTierResponse();
+					consentTierResponse.setResponse(Constants.NOT_SPECIFIED);
+					consentTierResponse.setConsentTier(consentTier);
+					consentTierResponseCollection.add(consentTierResponse);
+				}
 			}
 		}
-        return consentTierResponseCollection;
+		return consentTierResponseCollection;
 	}
-	
+
 	/*
 	 * Consent List for given collection protocol 
 	 * //Abhishek Mehta
 	 */
 	private Collection getConsentList(String collectionProtocolID) throws DAOException
-    {   	
-    	CollectionProtocolBizLogic collectionProtocolBizLogic = (CollectionProtocolBizLogic)BizLogicFactory.getInstance().getBizLogic(Constants.COLLECTION_PROTOCOL_FORM_ID);
-		Collection consentTierCollection = (Collection)collectionProtocolBizLogic.retrieveAttribute(CollectionProtocol.class.getName(), new Long(collectionProtocolID), "elements(consentTierCollection)");
-    	return consentTierCollection;
-    }
-	 
+	{
+		CollectionProtocolBizLogic collectionProtocolBizLogic = (CollectionProtocolBizLogic) BizLogicFactory.getInstance().getBizLogic(
+				Constants.COLLECTION_PROTOCOL_FORM_ID);
+		Collection consentTierCollection = (Collection) collectionProtocolBizLogic.retrieveAttribute(CollectionProtocol.class.getName(), Long
+				.valueOf(collectionProtocolID), "elements(consentTierCollection)");
+		return consentTierCollection;
+	}
+
 	/**
-     * Returns message label to display on success add or edit
-     * @return String
-     */
-	public String getMessageLabel() 
-	{		
-		return edu.wustl.catissuecore.util.global.Utility.getlLabel(this.lastName,this.firstName); 
+	 * Returns message label to display on success add or edit
+	 * @return String
+	 */
+	public String getMessageLabel()
+	{
+		return edu.wustl.catissuecore.util.global.Utility.getlLabel(this.lastName, this.firstName);
 	}
 }
